[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   # error handling
base64 = "0.21"                                     # base64 encoding/decoding
bytes = "1.3.0"                                     # helps manage buffers
indexmap = "2.7"
itertools = "0.14.0"
ordered-float = "5.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
